@@ -20,12 +20,14 @@
 package org.xwiki.eventstream.internal;
 
 import java.util.Arrays;
+import java.util.List;
 
+import javax.inject.Named;
 import javax.script.ScriptContext;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.xwiki.bridge.event.ApplicationReadyEvent;
@@ -39,12 +41,14 @@ import org.xwiki.rendering.renderer.printer.WikiPrinter;
 import org.xwiki.script.ScriptContextManager;
 import org.xwiki.template.Template;
 import org.xwiki.template.TemplateManager;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
@@ -60,11 +64,11 @@ import static org.mockito.Mockito.when;
  * @version $Id$
  * @since 9.6RC1
  */
-public class UntypedEventListenerTest
+@ComponentTest
+class UntypedEventListenerTest
 {
-    @Rule
-    public final MockitoComponentMockingRule<UntypedEventListener> mocker =
-            new MockitoComponentMockingRule<>(UntypedEventListener.class);
+    @InjectMockComponents
+    private UntypedEventListener listener;
 
     /**
      * Inner classed used to verify what is sent to the observation manager
@@ -74,160 +78,157 @@ public class UntypedEventListenerTest
         private DefaultUntypedRecordableEvent sentEvent;
 
         @Override
-        public Object answer(InvocationOnMock invocationOnMock) throws Throwable
+        public Object answer(InvocationOnMock invocationOnMock)
         {
-            sentEvent = invocationOnMock.getArgument(0);
+            this.sentEvent = invocationOnMock.getArgument(0);
             return null;
         }
 
         public DefaultUntypedRecordableEvent getSentEvent()
         {
-            return sentEvent;
+            return this.sentEvent;
         }
     }
 
     private MyAnswer answer;
 
+    @MockComponent
     private ObservationManager observationManager;
 
+    @MockComponent
     private ScriptContextManager scriptContextManager;
 
+    @MockComponent
+    @Named("context")
     private ComponentManager componentManager;
 
+    @MockComponent
     private ModelBridge modelBridge;
 
+    @MockComponent
     private TemplateManager templateManager;
 
-    private Template template;
-
-    private XDOM xdom;
-
+    @Mock
     private ScriptContext scriptContext;
 
+    @MockComponent
+    @Named("html/5.0")
     private BlockRenderer renderer;
 
-    @Before
-    public void setUp() throws Exception
+    @BeforeEach
+    void setUp() throws Exception
     {
-        componentManager = mocker.registerMockComponent(ComponentManager.class, "context");
-        modelBridge = mocker.registerMockComponent(ModelBridge.class);
-        renderer = mocker.getInstance(BlockRenderer.class, "html/5.0");
+        when(this.scriptContextManager.getCurrentScriptContext()).thenReturn(this.scriptContext);
 
-        scriptContextManager = mocker.registerMockComponent(ScriptContextManager.class);
-        scriptContext = mock(ScriptContext.class);
-        when(scriptContextManager.getCurrentScriptContext()).thenReturn(scriptContext);
-
-        templateManager = mocker.getInstance(TemplateManager.class);
-        template = mock(Template.class);
-        xdom = mock(XDOM.class);
-        when(templateManager.createStringTemplate(anyString(), any(), any(), any())).thenReturn(template);
-        when(templateManager.execute(template)).thenReturn(xdom);
+        Template template = mock(Template.class);
+        when(this.templateManager.createStringTemplate(anyString(), any(), any(), any())).thenReturn(template);
+        when(this.templateManager.execute(template)).thenReturn(mock(XDOM.class));
     }
 
-    @Before
-    public void watchObservationManager() throws Exception
+    @BeforeEach
+    void watchObservationManager()
     {
-        observationManager = mocker.registerMockComponent(ObservationManager.class);
-        answer = new MyAnswer();
-        doAnswer(answer).when(observationManager).notify(any(DefaultUntypedRecordableEvent.class), anyString(), any());
+        this.answer = new MyAnswer();
+        doAnswer(this.answer).when(this.observationManager)
+            .notify(any(DefaultUntypedRecordableEvent.class), anyString(), any());
     }
 
     private UntypedRecordableEventDescriptor mockDescriptor() throws Exception
     {
         UntypedRecordableEventDescriptor descriptor = mock(UntypedRecordableEventDescriptor.class);
-        when(descriptor.getEventTriggers()).thenReturn(Arrays.asList(DocumentUpdatedEvent.class.getCanonicalName()));
+        when(descriptor.getEventTriggers()).thenReturn(List.of(DocumentUpdatedEvent.class.getCanonicalName()));
         when(descriptor.getEventType()).thenReturn("myCustomEvent");
-        when(modelBridge.checkXObjectPresence(any(), any())).thenReturn(true);
-        when(componentManager.getInstanceList(any())).thenReturn(Arrays.asList(descriptor));
+        when(this.modelBridge.checkXObjectPresence(any(), any())).thenReturn(true);
+        when(this.componentManager.getInstanceList(any())).thenReturn(List.of(descriptor));
 
         return descriptor;
     }
 
     @Test
-    public void onEventWithBlankValidationAndBlankTarget() throws Exception
+    void onEventWithBlankValidationAndBlankTarget() throws Exception
     {
         // Mocks
         mockDescriptor();
 
         // Test
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
 
         // Verify
         verify(this.observationManager, times(1)).notify(any(DefaultUntypedRecordableEvent.class), any(), any());
 
-        assertNotNull(answer.getSentEvent());
-        assertTrue(answer.getSentEvent().getTarget().isEmpty());
-        assertEquals("myCustomEvent", answer.getSentEvent().getEventType());
+        assertNotNull(this.answer.getSentEvent());
+        assertTrue(this.answer.getSentEvent().getTarget().isEmpty());
+        assertEquals("myCustomEvent", this.answer.getSentEvent().getEventType());
     }
 
     @Test
-    public void onEventWithWrongEvent() throws Exception
+    void onEventWithWrongEvent() throws Exception
     {
         // Mocks
         mockDescriptor();
 
         // Test
-        mocker.getComponentUnderTest().onEvent(new ApplicationReadyEvent(), mock(Object.class), null);
+        this.listener.onEvent(new ApplicationReadyEvent(), mock(Object.class), null);
 
         // Verify
         verify(this.observationManager, never()).notify(any(), any(), any());
-        assertNull(answer.getSentEvent());
+        assertNull(this.answer.getSentEvent());
     }
 
     @Test
-    public void onEventWithoutXObject() throws Exception
+    void onEventWithoutXObject() throws Exception
     {
         // Mocks
         mockDescriptor();
 
         // Same than onEventWithBlankValidationAndBlankTarget() but with no XObject
-        when(modelBridge.checkXObjectPresence(any(), any())).thenReturn(false);
+        when(this.modelBridge.checkXObjectPresence(any(), any())).thenReturn(false);
 
         // Test
         Object source = mock(Object.class);
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), source, null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), source, null);
 
         // Verify
         verify(this.observationManager, never()).notify(any(), any(), any());
-        assertNull(answer.getSentEvent());
+        assertNull(this.answer.getSentEvent());
     }
 
     @Test
-    public void onEventWithCorrectValidation() throws Exception
+    void onEventWithCorrectValidation() throws Exception
     {
         // Mocks
         UntypedRecordableEventDescriptor descriptor = mockDescriptor();
         when(descriptor.getValidationExpression()).thenReturn("someVelocityCode");
-        when(scriptContext.getAttribute("xreturn")).thenReturn(true);
+        when(this.scriptContext.getAttribute("xreturn")).thenReturn(true);
 
         // Test
         Object source = mock(Object.class);
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), source, null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), source, null);
 
         // Verify
         verify(this.observationManager, times(1)).notify(any(DefaultUntypedRecordableEvent.class), any(), any());
-        assertNotNull(answer.getSentEvent());
-        assertEquals("myCustomEvent", answer.getSentEvent().getEventType());
+        assertNotNull(this.answer.getSentEvent());
+        assertEquals("myCustomEvent", this.answer.getSentEvent().getEventType());
     }
 
     @Test
-    public void onEventWithIncorrectValidation() throws Exception
+    void onEventWithIncorrectValidation() throws Exception
     {
         // Mocks
         UntypedRecordableEventDescriptor descriptor = mockDescriptor();
         when(descriptor.getValidationExpression()).thenReturn("someVelocityCode");
-        when(scriptContext.getAttribute("xreturn")).thenReturn(false);
+        when(this.scriptContext.getAttribute("xreturn")).thenReturn(false);
 
         // Test
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
 
         // Verify
         verify(this.observationManager, never()).notify(any(), any(), any());
-        assertNull(answer.getSentEvent());
+        assertNull(this.answer.getSentEvent());
     }
 
     @Test
-    public void onEventWithCorrectValidation2() throws Exception
+    void onEventWithCorrectValidation2() throws Exception
     {
         // Mocks
         UntypedRecordableEventDescriptor descriptor = mockDescriptor();
@@ -236,51 +237,51 @@ public class UntypedEventListenerTest
             WikiPrinter wikiPrinter = invocationOnMock.getArgument(1);
             wikiPrinter.println("    true ");
             return null;
-        }).when(renderer).render(any(XDOM.class), any(WikiPrinter.class));
+        }).when(this.renderer).render(any(XDOM.class), any(WikiPrinter.class));
 
         // Test
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
 
         // Verify
         verify(this.observationManager, times(1)).notify(any(DefaultUntypedRecordableEvent.class), any(), any());
-        assertNotNull(answer.getSentEvent());
-        assertEquals("myCustomEvent", answer.getSentEvent().getEventType());
+        assertNotNull(this.answer.getSentEvent());
+        assertEquals("myCustomEvent", this.answer.getSentEvent().getEventType());
     }
 
     @Test
-    public void onEventWithIncorrectValidation2() throws Exception
+    void onEventWithIncorrectValidation2() throws Exception
     {
         // Mocks
         UntypedRecordableEventDescriptor descriptor = mockDescriptor();
         when(descriptor.getValidationExpression()).thenReturn("someVelocityCode");
 
         // Test
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
 
         // Verify
         verify(this.observationManager, never()).notify(any(), any(), any());
-        assertNull(answer.getSentEvent());
+        assertNull(this.answer.getSentEvent());
     }
 
     @Test
-    public void onEventWithTarget() throws Exception
+    void onEventWithTarget() throws Exception
     {
         // Mocks
         UntypedRecordableEventDescriptor descriptor = mockDescriptor();
         when(descriptor.getTargetExpression()).thenReturn("someVelocityCode");
         // Target velocity
-        when(scriptContext.getAttribute("xreturn")).thenReturn(Arrays.asList("UserA", "UserB"));
+        when(this.scriptContext.getAttribute("xreturn")).thenReturn(Arrays.asList("UserA", "UserB"));
 
         // Test
-        mocker.getComponentUnderTest().onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
+        this.listener.onEvent(new DocumentUpdatedEvent(), mock(Object.class), null);
 
         // Verify
-        verify(this.observationManager, times(1)).notify(
-                any(DefaultUntypedRecordableEvent.class), any(), any());
-        assertNotNull(answer.getSentEvent());
-        assertNotNull(answer.getSentEvent().getTarget());
-        assertTrue(answer.getSentEvent().getTarget().contains("UserA"));
-        assertTrue(answer.getSentEvent().getTarget().contains("UserB"));
-        assertEquals(2, answer.getSentEvent().getTarget().size());
+        verify(this.observationManager, times(1))
+            .notify(any(DefaultUntypedRecordableEvent.class), any(), any());
+        assertNotNull(this.answer.getSentEvent());
+        assertNotNull(this.answer.getSentEvent().getTarget());
+        assertTrue(this.answer.getSentEvent().getTarget().contains("UserA"));
+        assertTrue(this.answer.getSentEvent().getTarget().contains("UserB"));
+        assertEquals(2, this.answer.getSentEvent().getTarget().size());
     }
 }
